fix invite modal overflow in safari

--- a/client/assets/styles/scss/components/lists-teammates.scss
+++ b/client/assets/styles/scss/components/lists-teammates.scss
@@ -1,6 +1,7 @@
 // team list
 .list-teammates {
   background: $white;
+  flex: 0 0 auto;
 
   .list-item {
     color: $gray-dark;
